--- a/res/xml/ems_dfpmapping.xml
+++ b/res/xml/ems_dfpmapping.xml
@@ -830,7 +830,7 @@
     <zone name="16758" adunit="grazia_ipad/homepage" position="1" index="no"/>
     <zone name="16762" adunit="grazia_ipad/homepage" position="0" index=""/>
     <zone name="16764" adunit="grazia_ipad/homepage" position="0" index=""/>
-    <zone name="15823" adunit="k50667_tab/_default" position="1" index="no"/>
+    <zone name="15823" adunit="k50667_and/homepage" position="1" index="no"/>
     <zone name="21804" adunit="k50667_ip/_default" position="0" index=""/>
     <zone name="21806" adunit="k50667_and/_default" position="0" index=""/>
     <zone name="23518" adunit="k50667_ip/_default" position="1" index="no"/>
