--- a/res/xml/ems_dfpmapping.xml
+++ b/res/xml/ems_dfpmapping.xml
@@ -1247,14 +1247,30 @@
     <zone name="12695" adunit="n-tv_ip/reise" position="1" index="yes"/>
     <zone name="12697" adunit="n-tv_ip/reise" position="2" index="yes"/>
     <zone name="12699" adunit="n-tv_ip/reise" position="10" index="yes"/>
-    <zone name="12741" adunit="n-tv_ip/reise" position="0" index=""/>
+    <zone name="12741" adunit="n-tv_ip/reise" position="0"/>
     <zone name="13223" adunit="n-tv_ip/reise" position="1" index="no"/>
+    <zone name="99995" adunit="n-tv_ip/reise" position="2" index="no"/>
+    <zone name="22868" adunit="n-tv_ip/reise" position="10" index="no"/>
+    <zone name="99993" adunit="n-tv_ipad/reise" position="1" index="yes"/>
+    <zone name="99992" adunit="n-tv_ipad/reise" position="2" index="yes"/>
+    <zone name="99991" adunit="n-tv_ipad/reise" position="10" index="yes"/>
+    <zone name="99870" adunit="n-tv_ipad/reise" position="0"/>
+    <zone name="99990" adunit="n-tv_ipad/reise" position="1" index="no"/>
+    <zone name="99989" adunit="n-tv_ipad/reise" position="2" index="no"/>
+    <zone name="99988" adunit="n-tv_ipad/reise" position="10" index="no"/>
+    <zone name="99987" adunit="n-tv_ipad/reise" position="1" index="yes"/>
+    <zone name="99986" adunit="n-tv_ipad/reise" position="2" index="yes"/>
+    <zone name="99985" adunit="n-tv_ipad/reise" position="10" index="yes"/>
+    <zone name="99869" adunit="n-tv_ipad/reise" position="0"/>
+    <zone name="99984" adunit="n-tv_ipad/reise" position="1" index="no"/>
+    <zone name="99983" adunit="n-tv_ipad/reise" position="2" index="no"/>
+    <zone name="99982" adunit="n-tv_ipad/reise" position="10" index="no"/>
     <zone name="13613" adunit="n-tv_and/reise" position="1" index="yes"/>
     <zone name="13615" adunit="n-tv_and/reise" position="2" index="yes"/>
     <zone name="13617" adunit="n-tv_and/reise" position="10" index="no"/>
-    <zone name="13659" adunit="n-tv_and/reise" position="0" index=""/>
+    <zone name="13659" adunit="n-tv_and/reise" position="0"/>
     <zone name="13683" adunit="n-tv_and/reise" position="1" index="no"/>
-    <zone name="22868" adunit="n-tv_ip/reise" position="10" index="no"/>
+    <zone name="22868" adunit="n-tv_ip/reise" position="10" index="no"/>    
     <zone name="20233" adunit="n-tv_ipad/_default" position="1" index="yes"/>
     <zone name="20401" adunit="n-tv_tab/_default" position="1" index="yes"/>
     <zone name="544" adunit="n-tv_ip/sport" position="1" index="yes"/>
