--- a/exampleApp/src/main/res/layout/activity_settings.xml
+++ b/exampleApp/src/main/res/layout/activity_settings.xml
@@ -29,6 +29,20 @@
 >
     </EditText>
 
+        <TextView
+            android:id="@+id/settingsText3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:text="@string/settingsText3" />
+
+        <EditText
+            android:id="@+id/settingsValueKeywords"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            >
+        </EditText>
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
